--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/mc-solo/chatApp/issues"
   },
-  "homepage": "https://github.com/mc-solo/chatApp#readme"
+  "homepage": "https://github.com/mc-solo/chatApp#readme",
+  "dependencies": {
+    "express": "^4.21.1",
+    "moment": "^2.30.1",
+    "socket.io": "^4.8.0"
+  }
 }
