--- a/package.json
+++ b/package.json
@@ -1,28 +1,23 @@
 {
-  "name": "chatapp",
+  "name": "chatcord",
   "version": "1.0.0",
-  "description": "real time messaging application using socket.io and express.js",
+  "description": "Realtime chat app with rooms",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server",
+    "dev": "nodemon server"
   },
-  "repository": {
-    "type": "git"
-  },
-  "keywords": [],
-  "author": "",
+  "author": "Wondowsen Asegid",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/mc-solo/chatApp/issues"
-  },
-  "homepage": "https://github.com/mc-solo/chatApp#readme",
   "dependencies": {
-    "express": "^4.21.1",
-    "moment": "^2.30.1",
-    "socket.io": "^4.8.0"
+    "@socket.io/redis-adapter": "^7.1.0",
+    "dotenv": "^14.3.2",
+    "express": "^4.17.1",
+    "moment": "^2.24.0",
+    "redis": "^4.0.2",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^2.0.2"
   }
 }
